// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expenses summary with multiple expense 1`] = `
<div>
  <h3>
    viewing 
    10
     
    expsenses
     totaling 
    $235.00
  </h3>
</div>
`;

exports[`should correctly render expenses summary with one expense 1`] = `
<div>
  <h3>
    viewing 
    1
     
    expense
     totaling 
    $2.35
  </h3>
</div>
`;
